--- a/Recepticator/Recepticator/Recepticator.csproj
+++ b/Recepticator/Recepticator/Recepticator.csproj
@@ -80,6 +80,8 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Ingredient.cs" />
+    <Compile Include="MainView.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
