--- a/Recepticator/Recepticator/Recepticator.csproj
+++ b/Recepticator/Recepticator/Recepticator.csproj
@@ -81,6 +81,7 @@
       <SubType>Code</SubType>
     </Compile>
     <Compile Include="Ingredient.cs" />
+    <Compile Include="Table.cs" />
     <Compile Include="MainView.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
