--- a/Recepticator/Recepticator/Recepticator.csproj
+++ b/Recepticator/Recepticator/Recepticator.csproj
@@ -80,7 +80,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Column.cs" />
     <Compile Include="Ingredient.cs" />
+    <Compile Include="IngredientTable.cs" />
     <Compile Include="Table.cs" />
     <Compile Include="MainView.cs" />
     <Compile Include="MainWindow.xaml.cs">
